# ocr-engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
application/: OcrEngine.hpp  main.cpp
east/: main.cpp
ocr/: OcrEngine.cpp  OcrEngine.hpp  OcrLib.cpp  OcrLib.hpp  OcrTypes.hpp
tests/: Catchmain.cpp  Helper.cpp  Helper.hpp  OcrEngineUnitTest.cpp  OpenCVUnitTest.cpp  PrototypingTest.cpp
